crates/daml-syntax/tests/compile_fail/coordinate_column_types_not_interchangeable.rs
use daml_syntax::{ByteColumn, CharColumn};

fn main() {
    let char_col = CharColumn::new(4);
    let _: ByteColumn = char_col;
}
